Reimplement message display as ListView